--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.115.5
 uvicorn[standard]==0.32.0
-pydantic==2.9.2
-numpy==1.26.4
+python-multipart==0.0.20
 pillow==10.4.0
-torch==2.3.1        # if host is CPU only; change to match your platform
-torchvision==0.18.1
+numpy==2.1.2
+torch==2.4.1
+torchvision==0.19.1
+timm==1.0.9
 requests==2.32.3
